--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="bower_components/aos/dist/aos.css" />
 
-    <title>Vite + React</title>
+    <title>MarvelVault</title>
   </head>
   <body>
     <div id="root"></div>
